# SkillPilot

./: .gitignore  README.md  main.py  project_draft.md  project_info.md  projects_info.md  pyproject.toml  subject_info.md
data/: candidate_cache.json  demo_cases.json
docs/: pipeline_agent_skill_mapping.md  stage_2_3_source_access.json  stage_2_3_source_access.md
generated_skills/homework-knowledge-hint/: README.md  SKILL.md
generated_skills/xiaohongshu-collage-composer/: README.md  SKILL.md
outputs/: decision_trace.json  recommendation_report.md
presentation/: skillpilot_class_report_slides.html
skillpilot/: __init__.py  agent.py  cli.py  config.py  llm.py  models.py  pipeline.py  safety.py  scoring.py  utils.py  web.py
skillpilot/agents/: __init__.py  builder.py  core.py  decision.py  discovery.py  evaluation.py  report.py  requirement.py
skillpilot/builders/: __init__.py  builder_agent.py  packaging_advisor.py  question_planner.py  resource_generator.py  safety_reviewer.py  skill_builder.py  skill_md_writer.py  skill_spec_generator.py  skill_structure_planner.py
skillpilot/io/: __init__.py  report_writer.py
skillpilot/modules/: __init__.py  candidate_extractor.py  readers.py  search_tools.py  source_catalog.py  stubs.py
skillpilot/skills/: __init__.py  cache.py  classification.py  core.py  decision.py  evaluation.py  planning.py  report.py  (+1 more)
tests/: test_agent_skill_refactor.py  test_cli_smoke.py  test_config.py  test_evaluation_decision.py  test_reading_and_extraction.py  test_search_planning.py  test_skill_builder_agent.py  test_web.py
(+26 files in other folders)
